--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/react-modal": "^3.13.1",
+    "@types/react-responsive": "^8.0.5",
+    "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.20",
     "axios": "^0.25.0",
     "miragejs": "^0.1.43",
@@ -11,7 +13,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
